crates/cribo/tests/snapshots/bundled_code@xfail_bundle_third_party_conditional_annotation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_conditional_annotation/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

'''Annotations inside module-level control flow keep providers external.\n\n`if enabled: TOKEN: str = "..."` records TOKEN in __annotations__ exactly\nlike an unconditional annotation; generated namespaces reproduce neither,\nso the provider stays installed.\n'''
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
import cond_ann_pkg
print("annotated:", sorted(cond_ann_pkg.__annotations__))
print("token:", cond_ann_pkg.TOKEN)
