crates/cribo/tests/snapshots/bundled_code@xfail_bundle_third_party_consumer_dunder_reads.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_consumer_dunder_reads/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Consumer code reading a provider's import-spec globals keeps it external.\n\nA bundled namespace has no faithful __file__/__spec__, so the observed\nprovider must keep its installed module identity.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
Path = _cribo.pathlib.Path
import spec_provider_pkg
print("data:", _cribo.pathlib.Path(spec_provider_pkg.__file__).with_name("data.txt").read_text().strip())
print("origin set:", spec_provider_pkg.__spec__.origin is not None)
